Clean code author

--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -15,12 +15,27 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="nav-two-eg2-tab" href="#nav-two-eg2" data-bs-toggle="pill" data-bs-target="#nav-two-eg2" role="tab" aria-controls="nav-two-eg2" aria-selected="false">
-                <i class="bi-person nav-icon"></i> Articles
+                <i class="bi-book nav-icon"></i> Articles
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="nav-three-eg2-tab" href="#nav-three-eg2" data-bs-toggle="pill" data-bs-target="#nav-three-eg2" role="tab" aria-controls="nav-three-eg2" aria-selected="false">
-                <i class="bi-sliders nav-icon"></i> Comptes
+                <i class="bi-box-seam nav-icon"></i> Éditeurs
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-four-eg2-tab" href="#nav-four-eg2" data-bs-toggle="pill" data-bs-target="#nav-four-eg2" role="tab" aria-controls="nav-four-eg2" aria-selected="false">
+                <i class="bi-pen nav-icon"></i> Auteurs
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-five-eg2-tab" href="#nav-five-eg2" data-bs-toggle="pill" data-bs-target="#nav-five-eg2" role="tab" aria-controls="nav-five-eg2" aria-selected="false">
+                <i class="bi-collection nav-icon"></i> Genres
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-six-eg2-tab" href="#nav-six-eg2" data-bs-toggle="pill" data-bs-target="#nav-six-eg2" role="tab" aria-controls="nav-six-eg2" aria-selected="false">
+                <i class="bi-person nav-icon"></i> Comptes
               </a>
             </li>
           </ul>
@@ -28,7 +43,7 @@
       </div>
 
 
-      <app-author></app-author>
+
 
 
           <!-- Tab Content -->
@@ -113,6 +128,18 @@
         </div>
 
         <div class="tab-pane fade" id="nav-three-eg2" role="tabpanel" aria-labelledby="nav-three-eg2-tab">
+          Éditeurs
+        </div>
+
+        <div class="tab-pane fade" id="nav-four-eg2" role="tabpanel" aria-labelledby="nav-four-eg2-tab">
+          <app-author></app-author>
+        </div>
+
+        <div class="tab-pane fade" id="nav-five-eg2" role="tabpanel" aria-labelledby="nav-five-eg2-tab">
+          Genres
+        </div>
+
+        <div class="tab-pane fade" id="nav-six-eg2" role="tabpanel" aria-labelledby="nav-six-eg2-tab">
           Comptes
         </div>
 
