--- a/src/app/components/admin-administration/author/author.component.html
+++ b/src/app/components/admin-administration/author/author.component.html
@@ -1,42 +1,44 @@
-<div class="d-flex justify-content-center">
-  <div class="col-lg-6">
-    <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
-    <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
+<div class="container content-space-1">
+  <div class="d-flex justify-content-center">
+    <div class="col-lg-6">
+      <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
+      <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
 
-    <!-- Dropdown pour sélectionner un auteur -->
-    <div class="d-flex justify-content-between">
-      <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-          Sélectionner un auteur
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" *ngFor="let author of authors" (click)="selectAuthor(author)">{{ author.firstname }} {{ author.lastname }}</a>
+      <!-- Dropdown pour sélectionner un auteur -->
+      <div class="d-flex justify-content-between">
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            Sélectionner un auteur
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" *ngFor="let author of authors" (click)="selectAuthor(author)">{{ author.firstname }} {{ author.lastname }}</a>
+          </div>
         </div>
+        <button class="btn btn-primary" *ngIf="selectedAuthorCheck" (click)="addAuthor()">Nouveau auteur</button>
       </div>
-      <button class="btn btn-primary" *ngIf="selectedAuthorCheck" (click)="addAuthor()">Nouveau auteur</button>
-    </div>
-    <!-- Formulaire pour ajouter/modifier un auteur -->
-    <form #authorForm="ngForm">
-      <input class="d-none" id="id" name="id" [(ngModel)]="selectedAuthor.id">
-      <div class="form-group mt-4">
-        <label for="firstname">Prénom</label>
-        <input type="text" class="form-control" id="firstname" name="firstname" [(ngModel)]="selectedAuthor.firstname" required>
-      </div>
-      <div class="form-group">
-        <label for="lastname">Nom</label>
-        <input type="text" class="form-control" id="lastname" name="lastname" [(ngModel)]="selectedAuthor.lastname" required>
-      </div>
-      <div class="form-group">
-        <label for="language">Langue</label>
-        <input type="text" class="form-control" id="language" name="language" [(ngModel)]="selectedAuthor.language" required>
-      </div>
+      <!-- Formulaire pour ajouter/modifier un auteur -->
+      <form #authorForm="ngForm">
+        <input class="d-none" id="id" name="id" [(ngModel)]="selectedAuthor.id">
+        <div class="form-group mt-4">
+          <label for="firstname">Prénom</label>
+          <input type="text" class="form-control" id="firstname" name="firstname" [(ngModel)]="selectedAuthor.firstname" required>
+        </div>
+        <div class="form-group">
+          <label for="lastname">Nom</label>
+          <input type="text" class="form-control" id="lastname" name="lastname" [(ngModel)]="selectedAuthor.lastname" required>
+        </div>
+        <div class="form-group">
+          <label for="language">Langue</label>
+          <input type="text" class="form-control" id="language" name="language" [(ngModel)]="selectedAuthor.language" required>
+        </div>
 
-      <!-- Boutons Ajouter/Modifier/Supprimer -->
-      <div class="d-grid gap-2">
-        <button class="btn btn-primary mt-3" type="submit" *ngIf="selectedAuthorCheck" (click)="updateAuthor()">Modifier</button>
-        <button class="btn btn-primary mt-3" type="submit" *ngIf="!selectedAuthorCheck" (click)="postAuthor()">Ajouter</button>
-        <button class="btn btn-danger mt-3" *ngIf="selectedAuthorCheck" (click)="deleteAuthor()">Supprimer</button>
-      </div>
-    </form>
+        <!-- Boutons Ajouter/Modifier/Supprimer -->
+        <div class="d-grid gap-2">
+          <button class="btn btn-primary mt-3" type="submit" *ngIf="selectedAuthorCheck" (click)="updateAuthor()">Modifier</button>
+          <button class="btn btn-primary mt-3" type="submit" *ngIf="!selectedAuthorCheck" (click)="postAuthor()">Ajouter</button>
+          <button class="btn btn-danger mt-3" *ngIf="selectedAuthorCheck" (click)="deleteAuthor()">Supprimer</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
