add type management

--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -42,10 +42,7 @@
         </div>
       </div>
 
-
-
-
-
+      
           <!-- Tab Content -->
       <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-one-eg2" role="tabpanel" aria-labelledby="nav-one-eg2-tab">
@@ -128,7 +125,7 @@
         </div>
 
         <div class="tab-pane fade" id="nav-three-eg2" role="tabpanel" aria-labelledby="nav-three-eg2-tab">
-          Éditeurs
+          <app-editor></app-editor>
         </div>
 
         <div class="tab-pane fade" id="nav-four-eg2" role="tabpanel" aria-labelledby="nav-four-eg2-tab">
@@ -136,7 +133,7 @@
         </div>
 
         <div class="tab-pane fade" id="nav-five-eg2" role="tabpanel" aria-labelledby="nav-five-eg2-tab">
-          Genres
+          <app-type></app-type>
         </div>
 
         <div class="tab-pane fade" id="nav-six-eg2" role="tabpanel" aria-labelledby="nav-six-eg2-tab">
