--- a/src/app/components/admin-administration/type/type.component.html
+++ b/src/app/components/admin-administration/type/type.component.html
@@ -1,1 +1,40 @@
-<p>type works!</p>
+<div class="container content-space-3">
+  <div class="d-flex justify-content-center">
+    <div class="col-lg-6">
+      <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
+      <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
+
+      <!-- Dropdown pour sélectionner un auteur -->
+      <div class="d-flex justify-content-between">
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            Sélectionner un genre
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" *ngFor="let type of types" (click)="selectType(type)">{{ type.typeName }}</a>
+          </div>
+        </div>
+        <button class="btn btn-primary" *ngIf="selectedTypeCheck" (click)="addType()">Nouveau genre</button>
+      </div>
+      <!-- Formulaire pour ajouter/modifier un auteur -->
+      <form (ngSubmit)="onSubmit()" class="js-validate needs-validation" novalidate id="type-form" [formGroup]="typeForm">
+        <input class="d-none" id="id" name="id" formControlName="id">
+        <div class="form-group mt-4">
+          <label for="typeName">Genre</label>
+          <input [ngClass]="{'is-invalid':submitted && typeForm.controls['typeName'].errors}" type="text" class="form-control" id="typeName" name="typeName" formControlName="typeName" required>
+          <div *ngIf="submitted && typeForm.controls['typeName'].errors" class="text-danger">
+            La saisie du genre est obligatoire.
+          </div>
+        </div>
+
+        <!-- Boutons Ajouter/Modifier/Supprimer -->
+        <div class="d-grid gap-2">
+          <button class="btn btn-primary mt-3" type="submit" *ngIf="selectedTypeCheck" (click)="updateType()">Modifier</button>
+          <button class="btn btn-primary mt-3" type="submit" *ngIf="!selectedTypeCheck" (click)="postType()">Ajouter</button>
+          <button class="btn btn-danger mt-3" *ngIf="selectedTypeCheck" (click)="deleteType()">Supprimer</button>
+        </div>
+      </form>
+
+    </div>
+  </div>
+</div>
