Gestion user by admin

--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      
+
           <!-- Tab Content -->
       <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-one-eg2" role="tabpanel" aria-labelledby="nav-one-eg2-tab">
@@ -137,7 +137,7 @@
         </div>
 
         <div class="tab-pane fade" id="nav-six-eg2" role="tabpanel" aria-labelledby="nav-six-eg2-tab">
-          Comptes
+          <app-users></app-users>
         </div>
 
       </div>
