--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -46,7 +46,11 @@
           <!-- Tab Content -->
       <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-one-eg2" role="tabpanel" aria-labelledby="nav-one-eg2-tab">
-          <!-- Accordion -->
+          <app-articles></app-articles>
+
+
+
+          <!-- Accordion
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <div class="accordion-header" id="headingOne">
@@ -57,13 +61,11 @@
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
 
-                  <!-- Card -->
                   <div class="card">
                     <div class="card-header">
                       <h4 class="card-header-title">Commandes</h4>
                     </div>
 
-                    <!-- Table -->
                     <div class="table-responsive">
                       <table class="table table-nowrap table-align-middle ">
                         <thead class="thead-light">
@@ -76,7 +78,7 @@
                         </thead>
 
                         <tbody>
-                        <!--
+
                         <tr *ngFor="let order of orderList">
                           <td>
                             <span class="d-block h5 text-inherit mb-0 text-center">{{ order.date | date: 'dd/MM/yyyy' }}</span>
@@ -90,13 +92,13 @@
                             <span class="legend-indicator bg-success"></span>En cours
                           </td>
                         </tr>
--->
+
                         </tbody>
                       </table>
                     </div>
-                    <!-- End Table -->
+
                   </div>
-                  <!-- End Card -->
+
 
 
                 </div>
@@ -115,13 +117,13 @@
               </div>
             </div>
           </div>
-          <!-- End Accordion -->
+           End Accordion -->
 
 
         </div>
 
         <div class="tab-pane fade" id="nav-two-eg2" role="tabpanel" aria-labelledby="nav-two-eg2-tab">
-          <app-articles></app-articles>
+
         </div>
 
         <div class="tab-pane fade" id="nav-three-eg2" role="tabpanel" aria-labelledby="nav-three-eg2-tab">
