--- a/src/app/components/admin-administration/admin-administration.component.html
+++ b/src/app/components/admin-administration/admin-administration.component.html
@@ -42,10 +42,17 @@
         </div>
       </div>
 
+      <div class="d-flex justify-content-center">
+        <div class="col-lg-8">
+          <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
+          <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
+        </div>
+      </div>
 
           <!-- Tab Content -->
       <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-one-eg2" role="tabpanel" aria-labelledby="nav-one-eg2-tab">
+
           <app-articles></app-articles>
 
 
