--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   }'>
   <div class="container">
     <nav class="js-mega-menu navbar-nav-wrap">
-      <a class="navbar-brand" routerLink="home" aria-label="Unify">
+      <a class="navbar-brand" routerLink="home" aria-label="logo">
         <img class="navbar-brand-logo" src="./assets/svg/logos/LogoV2.svg" alt="Logo L2i">
       </a>
 
@@ -23,10 +23,9 @@
       <!-- Collapse -->
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <div class="navbar-absolute-top-scroller">
-          <nav class="navbar-nav-wrap-col collapse navbar-collapse" id="navbarNavMenu">
           <ul class="navbar-nav nav-pills">
             <!-- Shopping cart -->
-            <li class="nav-item ms-auto me-2 position-relative">
+            <li class="nav-item">
               <a class="btn btn-primary" routerLink="shopping-cart">Panier <span id="articleCard" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary"></span></a>
             </li>
              <!-- Log in -->
@@ -35,7 +34,7 @@
             </li>
             <!-- Sign up -->
             <li class="nav-item" *ngIf="!authService.isLogged">
-              <a class="btn btn-dark d-none d-lg-inline-block" routerLink="signup">S'enregistrer</a>
+              <a class="btn btn-dark d-lg-inline-block" routerLink="signup">S'enregistrer</a>
             </li>
             <!-- my account -->
             <li class="nav-item" *ngIf="authService.isLogged">
@@ -43,23 +42,20 @@
             </li>
             <!-- management administrator -->
             <li class="nav-item">
-              <a class="btn btn-primary" routerLink="admin-administration">Administration</a>
+              <a class="btn btn-primary d-lg-inline-block" routerLink="admin-administration">Administration</a>
             </li>
             <!-- Logout -->
             <li class="nav-item" *ngIf="authService.isLogged">
               <a class="btn btn-dark d-none d-lg-inline-block" (click)="logout()">Se déconnecter</a>
             </li>
           </ul>
-          </nav>
+
         </div>
       </div>
       <!-- End Collapse -->
     </nav>
   </div>
 </header>
-
-
-
 
 <!-- JS Plugins Init. template -->
 <script>
