--- a/src/app/components/admin-administration/users/users.component.html
+++ b/src/app/components/admin-administration/users/users.component.html
@@ -86,7 +86,7 @@
                                      "showClass": "bi-eye",
                                      "classChangeTarget": ".js-toggle-password-show-icon-1"
                                    }'>
-                <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:;" (click)="diplayPassword()">
+                <a class="js-toggle-password-target-1 input-group-append input-group-text" href="javascript:" (click)="diplayPassword()">
                   <i class="js-toggle-password-show-icon-1 bi-eye"></i>
                 </a>
                 <div *ngIf="submitted && userForm.controls['password'].errors" class="text-danger">
