--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
   <div id="cart-alert" class="alert alert-danger" role="alert" style="display:none;"></div>
     <!-- Content -->
-    <div class="container content-space-t-1 content-space-b-2 mt-5">
+    <div class="container">
       <div class="mx-lg-auto mt-5" style="max-width: 55rem;">
         <div class="d-flex justify-content-center align-items-center flex-column min-vh-lg-100">
           <div class="position-relative">
@@ -15,22 +15,6 @@
                         <div class="mb-5">
                           <h3 class="card-title">S'identifier</h3>
                         </div>
-
-                        <a class="btn btn-white btn-lg d-grid mb-4" href="#">
-                          <span class="d-flex justify-content-center align-items-center">
-                            <img class="avatar avatar-xss me-2" src="./assets/svg/brands/google-icon.svg" alt="Image Description">
-                            S'identifier avec Google
-                          </span>
-                        </a>
-
-                        <a class="btn btn-white btn-lg d-grid mb-4" href="#">
-                                <span class="d-flex justify-content-center align-items-center">
-                                        <img class="avatar avatar-xs me-2" src="./assets/svg/brands/facebook.svg" alt="Image Description">
-                                S'identifier avec Facebook
-                                </span>
-                        </a>
-
-                        <span class="divider-center text-muted mb-4">OU</span>
                       </div>
 
                      <!-- email -->
