--- a/src/app/components/admin-administration/articles/articles.component.html
+++ b/src/app/components/admin-administration/articles/articles.component.html
@@ -52,12 +52,17 @@
             <div class="col-sm-6">
               <div class="form-group mt-4">
                 <label for="ISBN">ISBN</label>
-                <input [ngClass]="{'is-invalid': submitted && articleForm.controls['ISBN'].errors}" type="text" class="form-control" id="ISBN" name="ISBN" formControlName="ISBN" required>
+                <input [ngClass]="{'is-invalid': submitted && articleForm.controls['ISBN'].errors}" type="text" class="form-control" id="ISBN" name="ISBN" formControlName="ISBN" required pattern="[0-9]*">
                 <div *ngIf="submitted && articleForm.controls['ISBN'].errors" class="text-danger">
-                  L'ISBN est obligatoire.
+                  <div *ngIf="articleForm.get('ISBN')?.errors?.['required']">L'ISBN est obligatoire.</div>
+                  <div *ngIf="articleForm.get('ISBN')?.errors?.['minlength']">L'ISBN doit contenir au moins 13 caractères.</div>
+                  <div *ngIf="articleForm.get('ISBN')?.errors?.['maxlength']">L'ISBN ne doit pas dépasser 13 caractères.</div>
+                  <div *ngIf="articleForm.get('ISBN')?.errors?.['pattern']">L'ISBN ne doit contenir que des chiffres.</div>
                 </div>
               </div>
             </div>
+
+
             <div class="col-sm-6">
               <div class="form-group mt-4">
                 <label for="format">Format</label>
@@ -77,60 +82,71 @@
             </div>
           </div>
 
+
           <div class="row">
-            <div class="col-sm-4">
-              <div class="form-group mt-4">
-                <label for="bookAuthor">Auteur</label>
-                <select class="form-select mb-2" >
-                  <option selected>Choisir un auteur</option>
-                  <option *ngFor="let author of authors" [value]="author.id">{{ author.firstname }} {{ author.lastname }}</option>
-                </select>
-                <input [ngClass]="{'is-invalid': submitted && articleForm.controls['bookAuthor'].errors}" type="text" class="form-control" id="bookAuthor" name="bookAuthor" formControlName="bookAuthor" required>
-                <div *ngIf="submitted && articleForm.controls['bookAuthor'].errors" class="text-danger">
-                  L'auteur est obligatoire.
+              <div class="col-sm-4">
+                <div class="form-group mt-4">
+                  <label>Auteur</label>
+                  <select class="form-select mb-2" #authorSelect (change)="addAuthor(authorSelect.selectedIndex)">
+                    <option selected disabled>Choisir un auteur</option>
+                    <option *ngFor="let author of authors" [value]="author.id">{{ author.firstname }} {{ author.lastname }}</option>
+                  </select>
+                  <ul>
+                    <li *ngFor="let author of authorList">
+                      {{ author.firstname }} {{ author.lastname }}
+                      <span class="remove-icon" (click)="removeAuthor(author)">
+                        <i class="bi bi-x-circle"></i>
+                      </span>
+                    </li>
+                  </ul>
                 </div>
               </div>
-            </div>
 
             <div class="col-sm-4">
               <div class="form-group mt-4">
-                <label for="bookEditor">Éditeur</label>
-                <select class="form-select mb-2" >
-                  <option selected>Choisir un éditeur</option>
+                <label>Éditeur <i class="bi-info-circle text-primary size-bi" data-bs-toggle="modal" data-bs-target="#editor"></i></label>
+                <select class="form-select mb-2" #editorSelect (change)="addEditor(editorSelect.selectedIndex)">
+                  <option selected disabled>Choisir un éditeur</option>
                   <option *ngFor="let editor of editors" [value]="editor.id">{{ editor.name }}</option>
                 </select>
-                <input [ngClass]="{'is-invalid': submitted && articleForm.controls['bookEditor'].errors}" type="text" class="form-control" id="bookEditor" name="bookEditor" formControlName="bookEditor" required>
-                <div *ngIf="submitted && articleForm.controls['bookEditor'].errors" class="text-danger">
-                  L'éditeur est obligatoire.
-                </div>
+                 <ul>
+                   <li *ngIf="editorList && editorList.length > 0">{{ editorList[0].name }}</li>
+                 </ul>
               </div>
             </div>
-
 
             <div class="col-sm-4">
               <div class="form-group mt-4">
-                <label for="bookType">Type de livre</label>
-                <select class="form-select mb-2" >
-                  <option selected>Choisir un type</option>
+                <label>Type de livre</label>
+                <select class="form-select mb-2" #typeSelect (change)="addType(typeSelect.selectedIndex)">
+                  <option selected disabled>Choisir un type</option>
                   <option *ngFor="let type of types" [value]="type.id">{{ type.typeName }}</option>
                 </select>
-                <input [ngClass]="{'is-invalid': submitted && articleForm.controls['bookType'].errors}" type="text" class="form-control" id="bookType" name="bookType" formControlName="bookType" required>
-                <div *ngIf="submitted && articleForm.controls['bookType'].errors" class="text-danger">
-                  Le type de livre est obligatoire.
-                </div>
+                <ul>
+                  <li *ngFor="let type of typeList">
+                    {{ type.typeName }}
+                    <span class="remove-icon" (click)="removeType(type)">
+                      <i class="bi bi-x-circle"></i>
+                    </span>
+                  </li>
+                </ul>
               </div>
             </div>
+
           </div>
 
           <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group mt-4">
-                <label for="image">Image</label>
-                <input [ngClass]="{'is-invalid': submitted && articleForm.controls['image'].errors}" type="text" class="form-control" id="image" name="image" formControlName="image" required>
-                <div *ngIf="submitted && articleForm.controls['image'].errors" class="text-danger">
-                  L'image est obligatoire.
+            <div class="col-sm-5">
+              <div class="form-group mt-7">
+                <div class="input-group">
+                  <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" (change)="handleImageSelection($event)">
                 </div>
               </div>
+            </div>
+            <div class="col-sm-1">
+                <span class="avatar avatar-sm avatar-4x3">
+                  <img *ngIf="imageBook && imageBook.length > 0" class="avatar-img" [src]="'data:image/png;base64,' + imageBook" alt="Image Description">
+                </span>
             </div>
             <div class="col-sm-3">
               <div class="form-group mt-4">
@@ -174,4 +190,26 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal editor-->
+  <div class="modal fade" id="editor" tabindex="-1" role="dialog" aria-labelledby="editor" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="userPasswordLabel">Information</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Vous ne pouvez pas sélectionner plusieurs éditeurs pour un livre.</p>
+          <div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-white" data-bs-dismiss="modal">Fermer</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Modal -->
+
 </main>
